objects/REVVY__MnStrategy2__c.object
<CustomObject>
    <fields>
        <fullName>ApplicableProducts__c</fullName>
        <label>Applicable Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Price__c</fullName>
        <label>Award Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Price_as_a_Percent_of_DN__c</fullName>
        <label>Award Price as a Percent of DN(%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Distributor_Margin__c</fullName>
        <label>Distributor Margin(%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fee_Percentage__c</fullName>
        <label>Fee Percentage</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <description>Upper bound of a quantity range</description>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <description>Lower bound of a quantity tier.</description>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Mfg_Sugg_Ttl__c</fullName>
        <label>Off Mfg. Sugg. Rtl(%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Part_Percentage__c</fullName>
        <label>Part Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PricingProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to Pricing Program</description>
        <label>Pricing Program</label>
        <referenceTo>REVVY__MnStrategy1__c</referenceTo>
        <relationshipLabel>Strategy 2</relationshipLabel>
        <relationshipName>PricingProgramLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_1__c</fullName>
        <label>Pricing 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_2__c</fullName>
        <label>Pricing 2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_as_a_Percent_of_DN__c</fullName>
        <label>Rebate as a Percent of DN(%)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Evaluation Sequence. Used in National Account</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>